<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="myArg"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
    </fragment>


    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />

        <argument
            android:name="categoryId"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_home_second_to_navigation_film_details"
            app:destination="@id/navigation_film_details" />
    </fragment>


    <fragment
        android:id="@+id/navigation_film_details"
        android:name="com.gmail.eamosse.imdb.ui.film.FilmDetailsFragment"
        android:label="@string/film_details"
        tools:layout="@layout/fragment_film_details">
        <argument
            android:name="filmId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_tv_home"
        android:name="com.gmail.eamosse.imdb.ui.tv.fragments.TvHomeFragment"
        android:label="@string/title_tv_home"
        tools:layout="@layout/fragment_tv_home">

        <action
            android:id="@+id/action_TvHomeFragment_to_TvFragment"
            app:destination="@id/tv_list" />
    </fragment>

    <fragment
        android:id="@+id/tv_list"
        android:name="com.gmail.eamosse.imdb.ui.tv.fragments.TvFragment"
        android:label="@string/title_tv">
        <argument
            android:name="catId"
            app:argType="string" />
        <argument
            android:name="catName"
            app:argType="string" />
        <action
            android:id="@+id/action_TvFragment_to_TvFragmentDetail"
            app:destination="@id/tv_detail" />
    </fragment>

    <fragment
        android:id="@+id/tv_detail"
        android:name="com.gmail.eamosse.imdb.ui.tv.fragments.TvDetailFragment"
        android:label="@string/title_detail_tv">
        <argument
            android:name="tvId"
            app:argType="string"/>
        <argument
            android:name="tvName"
            app:argType="string"/>
    </fragment>
</navigation>